--- a/2. managing-kubernetes-api-server-pods/03/CreatePodsWithLabels.yaml
+++ b/2. managing-kubernetes-api-server-pods/03/CreatePodsWithLabels.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: nginx-pod-1
-  namespace: pawel-labels
+  namespace: playground
   labels: 
     app: MyWebApp
     deployment: v1
@@ -18,7 +18,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: nginx-pod-2
-  namespace: pawel-labels
+  namespace: playground
   labels: 
     app: MyWebApp
     deployment: v1.1
@@ -34,7 +34,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: nginx-pod-3
-  namespace: pawel-labels
+  namespace: playground
   labels: 
     app: MyWebApp
     deployment: v1.1
@@ -50,7 +50,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: nginx-pod-4
-  namespace: pawel-labels
+  namespace: playground
   labels: 
     app: MyDatabase
     deployment: v1.1
@@ -66,7 +66,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: nginx-pod-5
-  namespace: pawel-labels
+  namespace: playground
   labels: 
     app: MyAdminApp
     deployment: v1
