--- a/2. managing-kubernetes-api-server-pods/03/deployment-label.yaml
+++ b/2. managing-kubernetes-api-server-pods/03/deployment-label.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: hello-world
-  namespace: pawel-labels
+  namespace: playground
   labels:
     app: hello-world
 spec:
