--- a/2. managing-kubernetes-api-server-pods/03/service.yaml
+++ b/2. managing-kubernetes-api-server-pods/03/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: hello-world
-  namespace: pawel-labels
+  namespace: playground
 spec:
   ports:
   - port: 80
