--- a/2. managing-kubernetes-api-server-pods/04/multicontainer-pod.yaml
+++ b/2. managing-kubernetes-api-server-pods/04/multicontainer-pod.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: multicontainer-pod
-  namespace: managing-pods
+  namespace: default
 spec:
   containers:
   - name: producer
