--- a/2. managing-kubernetes-api-server-pods/04/container-probes.yaml
+++ b/2. managing-kubernetes-api-server-pods/04/container-probes.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: hello-world
-  namespace: managing-pods
+  namespace: default
 spec:
   replicas: 1
   selector:
