--- a/2. managing-kubernetes-api-server-pods/04/init-containers.yaml
+++ b/2. managing-kubernetes-api-server-pods/04/init-containers.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: init-containers
-  namespace: managing-pods
+  namespace: default
 spec:
   initContainers:
   - name: init-service
