--- a/2. managing-kubernetes-api-server-pods/04/pod-restart-policy.yaml
+++ b/2. managing-kubernetes-api-server-pods/04/pod-restart-policy.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: hello-world-onfailure-pod
-  namespace: managing-pods
+  namespace: default
 spec:
   containers:
   - name: hello-world
